offlineimap (3.2.2) unstable; urgency=low

  * Updated manual to show new Gray color.
  * Scrolling behavior is better now; sometimes, with fast-scrolling text,
    the log would stop scrolling.

 -- John Goerzen <jgoerzen@complete.org>  Thu, 25 Jul 2002 08:22:25 -0500

offlineimap (3.2.1) unstable; urgency=low

  * There is a new "connecting" event that will appear in all but the
    Quiet UIs.  It has a gray color in Blinkenlights.  This event indicates
    the the program is connecting to a remote server.
  * Blinkenlights UI log window is now scrolled and has a new
    config file option "bufferlines" to specify the size of the scroll
    buffer.
  * The Blinkenlights window is now non-resizable when the log is disabled.
    When the log is enabled, the window is resizable, and the changes in
    size are reflected in the log widget.  Therefore, the Bigger Log
    and Smaller Log items can disappear, and the Log menu now becomes
    a Show Log or a Hide Log menu option.  No sub-menus necessary anymore.
    This presents a much cleaner feel, more intuitive operation, and
    faster navigation.
  * Fix for account name interpolation in dot warning from 3.2.0 from
    Martijn Pieters.
  * Backed out check for . in account names for now.  Will put it back in
    when we have a consensus on what exactly to do.  Doubt that anyone
    has a foldername that would conflict with Blinkenlights anyway.
  * Fix reading the ui.Tk.Blinkenlights bufferlines option.

 -- John Goerzen <jgoerzen@complete.org>  Wed, 24 Jul 2002 17:04:04 -0500

offlineimap (3.2.0) unstable; urgency=low

  * New BLINKENLIGHTS interface!  Mesmerising, isn't it?
  * New ui.Tk.Blinkenlights section in offlineimap.conf.
  * New USER INTERFACES section in the manual.
  * TTYUI isusable() now checks to see if stdout and stdin are TTYs.
  * Added build-dependency on python2.2-dev.  Closes: #154167.

 -- John Goerzen <jgoerzen@complete.org>  Wed, 24 Jul 2002 17:53:20 -0500
