@@ -66,6 +66,14 @@ maxsyncaccounts = 1
 ui = Tk.Blinkenlights, Tk.VerboseUI, TTY.TTYUI, Noninteractive.Basic,
      Noninteractive.Quiet
 
+# If you try to synchronize messages to a read-only folder,
+# OfflineIMAP will generate a warning.  If you want to suppress these
+# warnings, set ignore-readonly to yes.  Read-only IMAP folders allow
+# reading but not modification, so if you try to change messages in
+# the local copy of such a folder, the IMAP server will prevent
+# OfflineIMAP from propogating those changes to the IMAP server.
+
+ignore-readonly = no
 
 ##################################################
 # Mailbox name recorder
